fix the submit button alignment in the comments area for DE263906

--- a/src/main/cool/src/app/feature/pirate-ship/modules/changestatus/changestatus.component.css
+++ b/src/main/cool/src/app/feature/pirate-ship/modules/changestatus/changestatus.component.css
@@ -13,7 +13,7 @@
 span.ico-punchout {
     position: relative;
     top: 2px;
-    left: 5px;
+    left: 6px;
 }
 .panel-scroll {
     /*width: 670px;*/
